--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3.1"
 
 services:
-  omada-controller:
-    container_name: omada-controller
-    image: mbentley/omada-controller:5.13
+  omada-controller-original:
+    container_name: omada_original
+    image: docker.io/mbentley/omada-controller:5.12-external-mongo-test
     restart: unless-stopped
     ulimits:
       nofile:
         soft: 4096
         hard: 8192
     stop_grace_period: 60s
-    network_mode: host
+#    network_mode: host
     environment:
       - PUID=508
       - PGID=508
@@ -31,10 +31,60 @@ services:
       - SSL_CERT_NAME=tls.crt
       - SSL_KEY_NAME=tls.key
       - TZ=Etc/UTC
-    volumes:
-      - omada-data:/opt/tplink/EAPController/data
-      - omada-logs:/opt/tplink/EAPController/logs
+      - MONGO_EXTERNAL="true"
+      - EAP_MONGOD_URI="mongodb://omada:0m4d4@mongodb.omada:27017/omada"
+    ports:
+      - 8043:8043
+  omada-controller-openj9:
+    container_name: omada_openj9
+    image: 1eddddeef383ebc8cac7c546e9c8653d96da03ace7a6709530fccd85d738f99a
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+    ulimits:
+      nofile:
+        soft: 4096
+        hard: 8192
+    stop_grace_period: 60s
+#    network_mode: host
+    environment:
+      - PUID=508
+      - PGID=508
+      - MANAGE_HTTP_PORT=8088
+      - MANAGE_HTTPS_PORT=8043
+      - PORTAL_HTTP_PORT=8088
+      - PORTAL_HTTPS_PORT=8843
+      - PORT_APP_DISCOVERY=27001
+      - PORT_ADOPT_V1=29812
+      - PORT_UPGRADE_V1=29813
+      - PORT_MANAGER_V1=29811
+      - PORT_MANAGER_V2=29814
+      - PORT_DISCOVERY=29810
+      - PORT_TRANSFER_V2=29815
+      - PORT_RTTY=29816
+      - SHOW_SERVER_LOGS=true
+      - SHOW_MONGODB_LOGS=false
+      - SSL_CERT_NAME=tls.crt
+      - SSL_KEY_NAME=tls.key
+      - TZ=Etc/UTC
+      - MONGO_EXTERNAL="true"
+      - EAP_MONGOD_URI="mongodb://omada:0m4d4@mongodb2.omada:27017/omada"
+    ports:
+      - 8044:8043
+  mongodb:
+    container_name: mongodb
+    image: docker.io/mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: omada
+      MONGO_INITDB_ROOT_PASSWORD: 0m4d4
+      MONGO_INITDB_DATABASE: omada
+  mongodb2:
+    container_name: mongodb2
+    image: docker.io/mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: omada
+      MONGO_INITDB_ROOT_PASSWORD: 0m4d4
+      MONGO_INITDB_DATABASE: omada
 
-volumes:
-  omada-data:
-  omada-logs:
