Fixes to docker-compose to actually connect to external mongodb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,29 +12,31 @@ services:
     stop_grace_period: 60s
 #    network_mode: host
     environment:
-      - PUID=508
-      - PGID=508
-      - MANAGE_HTTP_PORT=8088
-      - MANAGE_HTTPS_PORT=8043
-      - PORTAL_HTTP_PORT=8088
-      - PORTAL_HTTPS_PORT=8843
-      - PORT_APP_DISCOVERY=27001
-      - PORT_ADOPT_V1=29812
-      - PORT_UPGRADE_V1=29813
-      - PORT_MANAGER_V1=29811
-      - PORT_MANAGER_V2=29814
-      - PORT_DISCOVERY=29810
-      - PORT_TRANSFER_V2=29815
-      - PORT_RTTY=29816
-      - SHOW_SERVER_LOGS=true
-      - SHOW_MONGODB_LOGS=false
-      - SSL_CERT_NAME=tls.crt
-      - SSL_KEY_NAME=tls.key
-      - TZ=Etc/UTC
-      - MONGO_EXTERNAL="true"
-      - EAP_MONGOD_URI="mongodb://omada:0m4d4@mongodb.omada:27017/omada"
+      PUID: 508
+      PGID: 508
+      MANAGE_HTTP_PORT: 8088
+      MANAGE_HTTPS_PORT: 8043
+      PORTAL_HTTP_PORT: 8088
+      PORTAL_HTTPS_PORT: 8843
+      PORT_APP_DISCOVERY: 27001
+      PORT_ADOPT_V1: 29812
+      PORT_UPGRADE_V1: 29813
+      PORT_MANAGER_V1: 29811
+      PORT_MANAGER_V2: 29814
+      PORT_DISCOVERY: 29810
+      PORT_TRANSFER_V2: 29815
+      PORT_RTTY: 29816
+      SHOW_SERVER_LOGS: "true"
+      SHOW_MONGODB_LOGS: "false"
+      SSL_CERT_NAME: tls.crt
+      SSL_KEY_NAME: tls.key
+      TZ: Etc/UTC
+      MONGO_EXTERNAL: "true"
+      EAP_MONGOD_URI: "mongodb://mongodb:27017/omada"
     ports:
       - 8043:8043
+    depends_on:
+      - mongodb
   omada-controller-openj9:
     container_name: omada_openj9
     image: 6259922e1111a3abe7b630f677d83a0e7621d5f55efe3070e6097e1492b72ffb
@@ -50,41 +52,39 @@ services:
     stop_grace_period: 60s
 #    network_mode: host
     environment:
-      - PUID=508
-      - PGID=508
-      - MANAGE_HTTP_PORT=8088
-      - MANAGE_HTTPS_PORT=8043
-      - PORTAL_HTTP_PORT=8088
-      - PORTAL_HTTPS_PORT=8843
-      - PORT_APP_DISCOVERY=27001
-      - PORT_ADOPT_V1=29812
-      - PORT_UPGRADE_V1=29813
-      - PORT_MANAGER_V1=29811
-      - PORT_MANAGER_V2=29814
-      - PORT_DISCOVERY=29810
-      - PORT_TRANSFER_V2=29815
-      - PORT_RTTY=29816
-      - SHOW_SERVER_LOGS=true
-      - SHOW_MONGODB_LOGS=false
-      - SSL_CERT_NAME=tls.crt
-      - SSL_KEY_NAME=tls.key
-      - TZ=Etc/UTC
-      - MONGO_EXTERNAL="true"
-      - EAP_MONGOD_URI="mongodb://omada:0m4d4@mongodb2.omada:27017/omada"
+      PUID: 508
+      PGID: 508
+      MANAGE_HTTP_PORT: 8088
+      MANAGE_HTTPS_PORT: 8043
+      PORTAL_HTTP_PORT: 8088
+      PORTAL_HTTPS_PORT: 8843
+      PORT_APP_DISCOVERY: 27001
+      PORT_ADOPT_V1: 29812
+      PORT_UPGRADE_V1: 29813
+      PORT_MANAGER_V1: 29811
+      PORT_MANAGER_V2: 29814
+      PORT_DISCOVERY: 29810
+      PORT_TRANSFER_V2: 29815
+      PORT_RTTY: 29816
+      SHOW_SERVER_LOGS: "true"
+      SHOW_MONGODB_LOGS: "false"
+      SSL_CERT_NAME: tls.crt
+      SSL_KEY_NAME: tls.key
+      TZ: Etc/UTC
+      MONGO_EXTERNAL: "true"
+      EAP_MONGOD_URI: "mongodb://mongodb2:27017/omada"
     ports:
       - 8044:8043
+    depends_on:
+      - mongodb2
   mongodb:
     container_name: mongodb
     image: docker.io/mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: omada
-      MONGO_INITDB_ROOT_PASSWORD: 0m4d4
       MONGO_INITDB_DATABASE: omada
   mongodb2:
     container_name: mongodb2
     image: docker.io/mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: omada
-      MONGO_INITDB_ROOT_PASSWORD: 0m4d4
       MONGO_INITDB_DATABASE: omada
 
